--- a/src/CSS/details.css
+++ b/src/CSS/details.css
@@ -4,26 +4,24 @@
     font-family: 'Inter', sans-serif;
 }
 
-/*-------------- header's style --------------*/
-
+/*-------------- header style --------------*/
 .navbar{
+    display: flex;
+    align-items: center;
     position: fixed;
     top: 0;
     width: 100%;
-    padding-top: 12px;
     background-color: #32325D;
-    width: fixed 1512px;
-    height: 49px;
+    height: 55px;
     text-decoration: none;
     color: white;
 }
-
-.title-blog{
-    color: var(--white, #FFF);
-    font-size: 24px;
-    font-family: Inter;
-    font-weight: 600;
-    margin-left: 80px;
+.link-blog {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-left: 100px;
+    gap: 15px;
 }
 
 .link-blog {    
@@ -31,16 +29,13 @@
     color: white;
 } 
 
-.logo{
-    margin-left: 30px;
+.link-blog img {
+    width: 32px;
+    height: 32px;
 }
 
-#logo-image{
-    position: absolute;
-    top: 15px;
-    width: 28px;
-    height: 28px;
-    margin-left: 46px;
+.link-blog span {
+    font-size: 25px;
 }
 
 /*-------------- back-button style --------------*/
@@ -48,8 +43,8 @@
     position: fixed;
     width: 75px;
     height: 75px;
-    top: 82px;
-    left: 34px;
+    top: 100px;
+    left: 80px;
     flex-shrink: 0;
     border-radius: 75px;
     border: 0.3px solid rgba(255, 255, 255, 0.60);
@@ -60,19 +55,19 @@
     align-items: center;
 }
 
-#postDetails {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 .postDetailsContainer{
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 771px;
-    margin-bottom: 20px;
+    margin-top: 70px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+#postDetails {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .postDetailsContainer img {
@@ -80,7 +75,7 @@
     width: 700px;
     height: 400px;
     flex-shrink: 0;
-    margin-top: 79px;
+    margin-top: 30px;
 }
 
 .postDetailsContainer h1{
@@ -122,10 +117,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     width: 771px;
     margin-bottom: 20px;
     box-shadow: 0px 4px 4px 0px #00000040;
-    margin-top: 100px;
+    margin-top: 70px;
 }
 
 .comments{
@@ -133,7 +129,6 @@
     width: 652px;
     flex-direction: column;
     flex-shrink: 0;
-    
 }
 
 .usuario {
